--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             margin: 0;
             overflow: hidden;
         }
+
+        canvas {
+            display: block;
+        }
     </style>
     <title>Christmas Tree</title>
 </head>
@@ -39,12 +43,12 @@
         }
 
         function drawLight(x, y, color) {
-            if (Math.random() < 0.033) {
+            if (Math.random() < 0.066) {
                 ctx.fillStyle = color;
                 ctx.beginPath();
                 ctx.arc(x, y, 6, 0, 2 * Math.PI);
                 ctx.fill();
-            } else if (randomNum < 0.066) {
+            } else if (Math.random() < 0.066) {
                 ctx.fillStyle = color;
                 ctx.beginPath();
                 ctx.arc(x, y, 3, 0, 2 * Math.PI);
