--- a/index3.html
+++ b/index3.html
@@ -5,89 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christmas Tree Animation</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background-color: rgb(21, 21, 21);
-            width: 100vw;
-            height: 100vh;
-            position: relative;
-        }
-
-        canvas {
-            display: block;
-        }
-    </style>
-    <style type="text/css">
-        @-webkit-keyframes my {
-            0% {
-                color: #ffff00;
-            }
-
-            50% {
-                color: #fff;
-            }
-
-            100% {
-                color: #ffff00;
-            }
-        }
-
-        @-moz-keyframes my {
-            0% {
-                color: #ffff00;
-            }
-
-            50% {
-                color: #fff;
-            }
-
-            100% {
-                color: #ffff00;
-            }
-        }
-
-        @-o-keyframes my {
-            0% {
-                color: #ffff00;
-            }
-
-            50% {
-                color: #fff;
-            }
-
-            100% {
-                color: #ffff00;
-            }
-        }
-
-        @keyframes my {
-            0% {
-                color: #ffff00;
-            }
-
-            50% {
-                color: #fff;
-            }
-
-            100% {
-                color: #ffff00;
-            }
-        }
-
-        .flicker {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translate(-50%, 0);
-            font-size: 50px;
-            -webkit-animation: my 700ms infinite;
-            -moz-animation: my 700ms infinite;
-            -o-animation: my 700ms infinite;
-            animation: my 700ms infinite;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
