--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
     <h1 class="flicker" style="text-align: center;">Merry Christmas</h1>
-    <div class="d-center">
-        <canvas id="sineWaveStarsCanvas" width="800" height="800"></canvas>
+    <div class="d-center" style="position: relative; width: 100vw; height: 100vh;">
+        <canvas id="sineWaveStarsCanvas" width="800" height="800" style="position: absolute;"></canvas>
+        <canvas id="SnowsCanvas" width="860" height="540" style="width: 100vw; height: 100vh;"></canvas>
     </div>
     <script>
         const canvas = document.getElementById("sineWaveStarsCanvas");
@@ -67,14 +68,33 @@
             drawNextStar();
         }
 
+        const snows_canvas = document.getElementById("SnowsCanvas");
+        const snows_ctx = snows_canvas.getContext("2d");
+        function drawStar_2(x, y, radius, spikes, color) {
+            snows_ctx.save();
+            snows_ctx.beginPath();
+            snows_ctx.translate(x, y);
+            snows_ctx.moveTo(0, 0 - radius);
+            for (let i = 0; i < spikes; i++) {
+                snows_ctx.rotate((Math.PI / spikes) * 2);
+                snows_ctx.lineTo(0, 0 - radius * 0.5);
+                snows_ctx.rotate((Math.PI / spikes) * 2);
+                snows_ctx.lineTo(0, 0 - radius);
+            }
+            snows_ctx.closePath();
+            snows_ctx.fillStyle = color;
+            snows_ctx.fill();
+            snows_ctx.restore();
+        }
+
         function drawFallingSnow() {
             const snowflakes = [];
             const stars = [];
 
             function createSnowflake() {
                 return {
-                    x: Math.random() * canvas.width,
-                    y: Math.random() * canvas.height,
+                    x: Math.random() * snows_canvas.width,
+                    y: Math.random() * snows_canvas.height,
                     size: Math.random() * 3 + 1,
                     speed: Math.random() * 2 + 1,
                 };
@@ -82,9 +102,9 @@
 
             function createStar() {
                 return {
-                    x: Math.random() * canvas.width,
-                    y: Math.random() * canvas.height,
-                    radius: Math.random() * 3 + 1,
+                    x: Math.random() * snows_canvas.width,
+                    y: Math.random() * snows_canvas.height,
+                    radius: Math.random() * 5 + 1,
                     spikes: 5,
                     color: 'white',
                     speed: Math.random() * 2 + 1,
@@ -100,41 +120,39 @@
             }
 
             function drawFrame() {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                snows_ctx.clearRect(0, 0, snows_canvas.width, snows_canvas.height);
 
                 for (const snowflake of snowflakes) {
-                    ctx.fillStyle = "white";
-                    ctx.beginPath();
-                    ctx.arc(snowflake.x, snowflake.y, snowflake.size, 0, 2 * Math.PI);
-                    ctx.fill();
+                    snows_ctx.fillStyle = "white";
+                    snows_ctx.beginPath();
+                    snows_ctx.arc(snowflake.x, snowflake.y, snowflake.size, 0, 2 * Math.PI);
+                    snows_ctx.fill();
 
                     snowflake.y += snowflake.speed;
 
-                    if (snowflake.y > canvas.height) {
+                    if (snowflake.y > snows_canvas.height) {
                         snowflake.y = 0;
                     }
                 }
 
                 for (const star of stars) {
-                    ctx.fillStyle = "white";
-                    ctx.beginPath();
-                    ctx.arc(star.x, star.y, star.size, 0, 2 * Math.PI);
-                    ctx.fill();
+                    snows_ctx.fillStyle = "white";
+                    snows_ctx.beginPath();
+                    snows_ctx.arc(star.x, star.y, star.size, 0, 2 * Math.PI);
+                    snows_ctx.fill();
 
                     star.y += star.speed;
 
-                    if (star.y > canvas.height) {
+                    if (star.y > snows_canvas.height) {
                         star.y = 0;
                     }
-                    drawStar(star.x, star.y, star.radius, star.spikes, star.color);
+                    drawStar_2(star.x, star.y, star.radius, star.spikes, star.color);
                 }
-
-
                 requestAnimationFrame(drawFrame);
             }
-
             drawFrame();
         }
+
         drawFallingSnow();
         setInterval(() => {
             drawSineWaveStars(canvas.width, 0.1, canvas.width / 2.5);
